<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gnss_compass</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kosei.tanada@map4.jp">KoseiTanada</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nmea_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>llh_converter</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <build_depend>rclcpp_components</build_depend>
  <exec_depend>rclcpp_components</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
